syntax = "proto3";

package kbtg1000;

import "google/protobuf/timestamp.proto";

option go_package = "kbtg/kbtg1000";

message Echo {
    string id = 1;
    string name = 2;
    string description = 3;
    string status = 4;
    google.protobuf.Timestamp create_date = 5;
    google.protobuf.Timestamp update_date = 6;
}

message EchoList {
    string api = 1;
    repeated Echo echoList = 2;
}

service EchoService {
    rpc Query(Echo) returns (EchoList) {
    }
}